Fix padding to get rid of horizontal scrollbars

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -18,7 +18,7 @@ body {
 }
 
 .container-page-view {
-    padding: 1em;
+    padding: 15px;
 }
 
 /* ===== Nav Bar ===== */
